# GtkGlFrameRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  atlui.glade~  background.c  gtk3-opengl  gui.c  main.cpp  model.c
src/: .gitignore  background.cpp  gui.cpp  model.cpp  program.cpp  view.cpp
